@@ -24,6 +24,8 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
  */
 
+/* This file implement non-builtin cursor handling */
+
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
