@@ -19,6 +19,9 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
  */
 
+/* These functions handle the thumbnails and thumbnail area of the
+   viewer */
+
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
