@@ -19,6 +19,8 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
  */
 
+/* This file implements the zoom-related functions */
+
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
